--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -12,7 +12,9 @@ on:
       instanceState:
         description: 'State of the EC2 Instance'  
         required: true 
-     
+      name:
+        description: 'Name of the EC2 Instance'  
+        required: true 
  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -59,7 +61,45 @@ jobs:
       run: |
         aws ec2 stop-instances --instance-ids ${{ github.event.inputs.instanceID }} 
 
-         
+  delete_instance:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.instanceState == 'delete' }}
+    steps:
+    - name: Set up SSH key
+      run: |
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa ${{ github.event.inputs.instancePublicIP}} >> ~/.ssh/known_hosts
+    
+    - name: SSH into VM
+      run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP}} ' ls -la'
+
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Copy all bash scripts to VM
+      run: |
+          scp *.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
+    
+    - name: Execute the transferred scripts within VM
+      run: |
+           # ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'bash install_docker_k8s.sh && newgrp microk8s'
+           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash login_argocd.sh"
+
+    - name: Retrieve the Argocd Password       
+      run: |
+           mkdir -p artifacts
+           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
+    
+    
+   
+    - name: delete instance
+      run: |
+         ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "sudo argocd app delete ${{ github.event.inputs.name }}"
+     
     
   
     
