--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -56,8 +56,12 @@ jobs:
     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
     
     
-   
+    
     - name: stop instance
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
       run: |
         aws ec2 stop-instances --instance-ids ${{ github.event.inputs.instanceID }} 
 
