--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -6,15 +6,15 @@ on:
       instancePublicIP:
         description: 'The public ip of instance'  
         required: true 
-      instanceID:
-        description: 'ID of the EC2 Instance'  
-        required: true 
-      instanceState:
-        description: 'State of the EC2 Instance'  
-        required: true 
-      name:
-        description: 'Name of the EC2 Instance'  
-        required: true 
+      # instanceID:
+      #   description: 'ID of the EC2 Instance'  
+      #   required: true 
+      # instanceState:
+      #   description: 'State of the EC2 Instance'  
+      #   required: true 
+      # name:
+      #   description: 'Name of the EC2 Instance'  
+      #   required: true 
  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -25,6 +25,9 @@ jobs:
   #   runs-on: ubuntu-latest
   #   if: ${{ github.event.inputs.instanceState == 'stop' }}
   #   # Steps represent a sequence of tasks that will be executed as part of the job
+  greet:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
     steps:
     - name: Set up SSH key
       run: |
