--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -62,9 +62,8 @@ jobs:
     - name: Upload output.txt as an artifact
       uses: actions/upload-artifact@v2
       with:
-         name: aws-cli-output
-         path: artifacts
-         retention-days: 1
+          name: aws-cli-output
+          path: output.txt
 
     
 #     # - name: Execute the transferred scripts within VM
