--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -25,7 +25,7 @@ jobs:
   #   runs-on: ubuntu-latest
   #   if: ${{ github.event.inputs.instanceState == 'stop' }}
   #   # Steps represent a sequence of tasks that will be executed as part of the job
-  greet:
+  workflow:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
