--- a/.github/workflows/instance-state.yaml
+++ b/.github/workflows/instance-state.yaml
@@ -3,15 +3,9 @@ name: Create App in ArgoCD
 on:
   workflow_dispatch:
     inputs:
-      instancePublicIP:
-        description: 'The public ip of instance'  
+      instanceState:
+        description: 'State of the EC2 Instance'  
         required: true 
-      # instanceID:
-      #   description: 'ID of the EC2 Instance'  
-      #   required: true 
-      # instanceState:
-      #   description: 'State of the EC2 Instance'  
-      #   required: true 
       name:
         description: 'Name of the EC2 Instance'  
         required: true 
@@ -19,12 +13,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  # stop_instance:
-  #   # The type of runner that the job will run on
-  #   runs-on: ubuntu-latest
-  #   if: ${{ github.event.inputs.instanceState == 'stop' }}
-  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  This workflow contains a single job called "greet"
+  stop_instance:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.instanceState == 'stop' }}
+    # Steps represent a sequence of tasks that will be executed as part of the job
   workflow:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -34,192 +28,133 @@ jobs:
           mkdir -p ~/.ssh/
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa ${{ github.event.inputs.instancePublicIP}} >> ~/.ssh/known_hosts
+          ssh-keyscan -t rsa ${{ secrets.instancePublicIP }} >> ~/.ssh/known_hosts
     
     - name: SSH into VM
       run: |
-          ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP}} ' ls -la'
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} ' ls -la'
 
     - name: Checkout Repository
       uses: actions/checkout@v2
 
     - name: Copy all bash scripts to VM
       run: |
-          scp *.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
-          ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
-
-
-   
-    - name:  Print EC2 Instance IP
+          scp *.sh ubuntu@${{ secrets.instancePublicIP }}:/home/ubuntu
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} 'ls -la'
+    
+    - name: stop instance
       env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-east-1'
       run: |
-        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "sudo kubectl get managed | grep ${{ github.event.inputs.name}} | awk '{ print \$4 }'" > instance-id.txt 
-        
-        aws ec2 describe-instances --instance-ids $(cat instance-id.txt) --query "Reservations[*].Instances[*].PublicIpAddress" --output text > output.txt
+        aws ec2 stop-instances --instance-ids ${{ github.event.inputs.instanceID }} 
 
-    - name: Display Output
-      run: cat output.txt
-
-    - name: Upload output.txt as an artifact
-      uses: actions/upload-artifact@v2
-      with:
-          name: aws-cli-output
-          path: output.txt
-
+  start_instance:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.instanceState == 'start' }}
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    - name: Set up SSH key
+      run: |
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa ${{ secrets.instancePublicIP }} >> ~/.ssh/known_hosts
     
-#     # - name: Execute the transferred scripts within VM
-#     #   run: |
-#     #        # ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'bash install_docker_k8s.sh && newgrp microk8s'
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash login_argocd.sh"
+    - name: SSH into VM
+      run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} ' ls -la'
 
-#     # - name: Retrieve the Argocd Password       
-#     #   run: |
-#     #        mkdir -p artifacts
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
-    
-    
-    
-#     - name: stop instance
-#       env:
-#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           AWS_DEFAULT_REGION: 'us-east-1'
-#       run: |
-#         aws ec2 stop-instances --instance-ids ${{ github.event.inputs.instanceID }} 
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-#   start_instance:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-#     if: ${{ github.event.inputs.instanceState == 'start' }}
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#     - name: Set up SSH key
-#       run: |
-#           mkdir -p ~/.ssh/
-#           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-#           chmod 600 ~/.ssh/id_rsa
-#           ssh-keyscan -t rsa ${{ github.event.inputs.instancePublicIP}} >> ~/.ssh/known_hosts
+    - name: Copy all bash scripts to VM
+      run: |
+          scp *.sh ubuntu@${{ secrets.instancePublicIP }}:/home/ubuntu
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} 'ls -la'
     
-#     - name: SSH into VM
-#       run: |
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP}} ' ls -la'
+    - name: start instance
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
+      run: |
+        aws ec2 start-instances --instance-ids ${{ github.event.inputs.instanceID }} 
 
-#     - name: Checkout Repository
-#       uses: actions/checkout@v2
+  reboot_instance:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.instanceState == 'reboot' }}
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    - name: Set up SSH key
+      run: |
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa ${{ secrets.instancePublicIP }} >> ~/.ssh/known_hosts
+    
+    - name: SSH into VM
+      run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} ' ls -la'
 
-#     - name: Copy all bash scripts to VM
-#       run: |
-#           scp *.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
-    
-#     # - name: Execute the transferred scripts within VM
-#     #   run: |
-#     #        # ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'bash install_docker_k8s.sh && newgrp microk8s'
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash login_argocd.sh"
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-#     # - name: Retrieve the Argocd Password       
-#     #   run: |
-#     #        mkdir -p artifacts
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
+    - name: Copy all bash scripts to VM
+      run: |
+          scp *.sh ubuntu@${{ secrets.instancePublicIP }}:/home/ubuntu
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} 'ls -la'
     
-    
-    
-#     - name: start instance
-#       env:
-#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           AWS_DEFAULT_REGION: 'us-east-1'
-#       run: |
-#         aws ec2 start-instances --instance-ids ${{ github.event.inputs.instanceID }} 
-
-#   reboot_instance:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-#     if: ${{ github.event.inputs.instanceState == 'reboot' }}
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#     - name: Set up SSH key
-#       run: |
-#           mkdir -p ~/.ssh/
-#           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-#           chmod 600 ~/.ssh/id_rsa
-#           ssh-keyscan -t rsa ${{ github.event.inputs.instancePublicIP}} >> ~/.ssh/known_hosts
-    
-#     - name: SSH into VM
-#       run: |
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP}} ' ls -la'
-
-#     - name: Checkout Repository
-#       uses: actions/checkout@v2
-
-#     - name: Copy all bash scripts to VM
-#       run: |
-#           scp *.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
-    
-#     # - name: Execute the transferred scripts within VM
-#     #   run: |
-#     #        # ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'bash install_docker_k8s.sh && newgrp microk8s'
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash login_argocd.sh"
-
-#     # - name: Retrieve the Argocd Password       
-#     #   run: |
-#     #        mkdir -p artifacts
-#     #        ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
-    
-    
-    
-#     - name: reboot instance
-#       env:
-#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           AWS_DEFAULT_REGION: 'us-east-1'
-#       run: |
-#         aws ec2 reboot-instances --instance-ids ${{ github.event.inputs.instanceID }} 
+    - name: reboot instance
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
+      run: |
+        aws ec2 reboot-instances --instance-ids ${{ github.event.inputs.instanceID }} 
 
 
 
-#   delete_instance:
-#     runs-on: ubuntu-latest
-#     if: ${{ github.event.inputs.instanceState == 'delete' }}
-#     steps:
-#     - name: Set up SSH key
-#       run: |
-#           mkdir -p ~/.ssh/
-#           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-#           chmod 600 ~/.ssh/id_rsa
-#           ssh-keyscan -t rsa ${{ github.event.inputs.instancePublicIP}} >> ~/.ssh/known_hosts
+  delete_instance:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.instanceState == 'delete' }}
+    steps:
+    - name: Set up SSH key
+      run: |
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa ${{ secrets.instancePublicIP }} >> ~/.ssh/known_hosts
     
-#     - name: SSH into VM
-#       run: |
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP}} ' ls -la'
+    - name: SSH into VM
+      run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} ' ls -la'
 
-#     - name: Checkout Repository
-#       uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-#     - name: Copy all bash scripts to VM
-#       run: |
-#           scp *.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
-#           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
+    - name: Copy all bash scripts to VM
+      run: |
+          scp *.sh ubuntu@${{ secrets.instancePublicIP }}:/home/ubuntu
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} 'ls -la'
     
-#     - name: Execute the transferred scripts within VM
-#       run: |
-#            # ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'bash install_docker_k8s.sh && newgrp microk8s'
-#            ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash login_argocd.sh"
+    - name: Execute the transferred scripts within VM
+      run: |
+           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} "bash login_argocd.sh"
 
-#     - name: Retrieve the Argocd Password       
-#       run: |
-#            mkdir -p artifacts
-#            ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
+    - name: Retrieve the Argocd Password       
+      run: |
+           mkdir -p artifacts
+           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} "kubectl get secrets -n argocd argocd-initial-admin-secret -o=jsonpath={.data.password} | base64 -d" > artifacts/pswd.txt
     
     
    
-#     - name: delete instance
-#       run: |
-#          ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "sudo argocd app delete ${{ github.event.inputs.name }}"
+    - name: delete instance
+      run: |
+         ssh -v -i ~/.ssh/id_rsa ubuntu@${{ secrets.instancePublicIP }} "sudo argocd app delete ${{ github.event.inputs.name }}"
      
     
 
